--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Kenny Portfolio Webpage"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/IMG_1392.jpg" />
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
