--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,15 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/IMG_1392.jpg" />
     <link rel="stylesheet" href="bootstrap.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
     <title>My Portfolio</title>
   </head>
-  <body>
+  <body style="transition: ease 0.5s;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
