--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Kenny Portfolio Webpage"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/IMG_1392.jpg" />
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>My Portfolio</title>
-  </head>
-  <body style="transition: ease 0.5s;">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/mylogo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Kenny – Frontend Developer and Digital experience engineer. Take a tour and get to know" />
+  <meta name="title" content="Kenny – Frontend Developer and Digital experience engineer." />
+  <meta property="og:type" content="website" />
+  <!-- <meta property="og:url" content="https://www.notion.so/" /> -->
+  <meta property="og:title" content="Kenny Dev." />
+  <meta property="og:description"
+    content="Kenny – Frontend Developer and Digital experience engineer. Take a tour and get to know" />
+  <meta property="og:image" content="%PUBLIC_URL%/mylogo.png" />
+  <meta name=”robots” content=”index, follow”>
+
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/mylogo.png" />
+  <link rel="stylesheet" href="bootstrap.css">
+  <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>Kenny Dev.</title>
+</head>
+
+<body style="transition: ease 0.5s;">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
